code for mysql, mariadb

--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   "dependencies": {
     "getfake": "^0.37.0",
     "knex": "^2.4.2",
+    "mysql2": "^3.4.3",
     "pg": "^8.11.1",
     "uuid": "^9.0.0"
   }
