--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "prettier": "^2.8.8"
   },
   "dependencies": {
+    "cli-progress": "^3.12.0",
     "getfake": "^0.37.0",
     "knex": "^2.4.2",
     "mysql2": "^3.4.3",
